--- a/Utbk_iOS/Utbk_iOS/Info.plist
+++ b/Utbk_iOS/Utbk_iOS/Info.plist
@@ -20,6 +20,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>此App需要访问您的媒体库权限以获取音乐，不允许则无法添加音乐</string>
+	<key>NSCameraUsageDescription</key>
+	<string>此App使用您的相机才能录制视频、更新头像</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>此App需要访问麦克风才能录制视频</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>此App需要访问您的相册权限，开启后才能保存编辑的文件</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>此App需要访问您的相册才能保存名片、图片</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
