--- a/Utbk_iOS/Utbk_iOS/Info.plist
+++ b/Utbk_iOS/Utbk_iOS/Info.plist
@@ -20,6 +20,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>此App需要访问您的媒体库权限以获取音乐，不允许则无法添加音乐</string>
 	<key>NSCameraUsageDescription</key>
